# qt-cmake-template

./: CMakeLists.txt
.github/: copilot-instructions.md
include/: window.hpp
src/: main.cpp  window.cpp
